--- a/example/package.json
+++ b/example/package.json
@@ -18,12 +18,14 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-youtube-playlist": "^1.0.1",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.18.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-module-resolver": "^2.7.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "node-sass": "^4.5.3",
