--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "2.0.0",
   "description": "A react component for displaying the contents of a user's YouTube playlist.",
   "main": "dist/index.js",
+  "repository" : {
+    "type":"git",
+    "url":"https://github.com/DavidDionise/react-youtube-playlist.git",
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src --watch --out-dir dist",
