--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "repository" : {
     "type":"git",
-    "url":"https://github.com/DavidDionise/react-youtube-playlist.git",
+    "url":"https://github.com/DavidDionise/react-youtube-playlist.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
