--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [ "react", "es2017", "stage-2"],
+  "presets": [ "react", "es2017", "es2015", "stage-2"],
   "plugins": [
     ["transform-react-jsx"],
     ["module-resolver", {
