--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": [ "react", "es2017", "es2015", "stage-2"],
+  "presets": [ "react", "es2015", "es2017", "stage-2"],
   "plugins": [
     ["transform-react-jsx"],
     ["module-resolver", {
@@ -7,6 +7,12 @@
       "alias": {
         "utils": "./utils"
       }
+    }],
+    ["transform-runtime", {
+      "helpers": false,
+      "polyfill": false,
+      "regenerator": true,
+      "moduleName": "babel-runtime"
     }],
     ["transform-async-to-generator"]
   ]
